Add trilean state and global access to configurable tooling options

--- a/src/LayeC/LayeC.csproj
+++ b/src/LayeC/LayeC.csproj
@@ -24,7 +24,7 @@
 		<SelfContained>true</SelfContained>
 	</PropertyGroup>
 	<ItemGroup>
-	  <Folder Include="Driver\Docs\" />
+	  <Folder Include="Docs\" />
 	</ItemGroup>
 
 	<!--
