--- a/src/Choir/Choir.csproj
+++ b/src/Choir/Choir.csproj
@@ -1,8 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-    <PropertyGroup>
-		<OutputType>Exe</OutputType>
-		<AssemblyName>dnlayec</AssemblyName>
+	<PropertyGroup>
+		<OutputType>Library</OutputType>
 		<TargetFramework>net9.0</TargetFramework>
 		<LangVersion>12.0</LangVersion>
 		<ImplicitUsings>enable</ImplicitUsings>
@@ -10,24 +9,10 @@
 		<PublishAot>true</PublishAot>
 		<IsAotCompatible>true</IsAotCompatible>
 		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    </PropertyGroup>
-
-	<!-- Use this proerty group to get a smaller executable -->
-	<PropertyGroup Condition="$(Configuration)=='Release'">
-		<DebugType>none</DebugType>
-		<GenerateRuntimeConfigurationFiles>false</GenerateRuntimeConfigurationFiles>
-		<!--
-		<IlcDisableReflection>true</IlcDisableReflection>
-		-->
-		<EventSourceSupport>false</EventSourceSupport>
-		<IlcFoldIdenticalMethodBodies>true</IlcFoldIdenticalMethodBodies>
-		<IlcGenerateStackTraceData>false</IlcGenerateStackTraceData>
-		<IlcOptimizationPreference>Size</IlcOptimizationPreference>
-		<InvariantGlobalization>true</InvariantGlobalization>
-		<SelfContained>true</SelfContained>
 	</PropertyGroup>
+
 	<ItemGroup>
-	  <Folder Include="Docs\" />
+		<Folder Include="Docs\" />
 	</ItemGroup>
 
 	<!--
